--- a/app/src/main/res/layout/activity_select_team.xml
+++ b/app/src/main/res/layout/activity_select_team.xml
@@ -1,51 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/white">
+    android:background="@color/background">
 
-
-
-    <!-- Заголовок страницы -->
     <TextView
         android:id="@+id/select_team_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Выберите вашу любимую команду"
+        android:text="Выберите любимые команды"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/primary_text_bright"
         android:gravity="center"
         android:layout_marginBottom="20dp" />
 
-    <!-- Spinner для выбора команды -->
-    <Spinner
-        android:id="@+id/team_spinner"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/team_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:background="@drawable/edittext_background"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    <!-- Кнопка для подтверждения выбора -->
     <Button
-        android:id="@+id/select_button"
+        android:id="@+id/save_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Выбрать команду"
+        android:text="Сохранить выбор"
+        android:textSize="18sp"
         android:textColor="@color/white"
-        android:background="@color/green"
-        android:layout_marginTop="20dp" />
-
-    <!-- Текстовая информация о выбранной команде -->
-    <TextView
-        android:id="@+id/team_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:layout_marginTop="20dp" />
+        android:backgroundTint="@color/accent_bright"
+        android:padding="12dp"
+        android:layout_marginTop="16dp" />
 
 </LinearLayout>
