--- a/app/src/main/res/layout/item_team_selection.xml
+++ b/app/src/main/res/layout/item_team_selection.xml
@@ -17,13 +17,7 @@
         android:padding="12dp"
         android:gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/team_logo"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:contentDescription="Team Logo"
-            android:src="@drawable/ic_default_team_logo"
-            android:scaleType="centerCrop" />
+
 
         <TextView
             android:id="@+id/team_name"
@@ -43,7 +37,7 @@
             android:id="@+id/team_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/accent_bright" />
+            android:buttonTint="@color/button_background" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
